# simple-python-package-template

./: .flake8  README.md  pyproject.toml
tests/: test_main.py
tests/subpackage/: test_module.py
